[project]
name = "quatro"
version = "0.0.1"
description = "Tidy rectangular data"
dependencies = [
    "openpyxl==3.1.5",
    "pandas==2.3.3",
]
requires-python = ">=3.11"
readme = "README.md"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]

[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python==0.18.0",
]
